# Stellar-K8s

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: benchmark.yml  ci.yml
benchmarks/baselines/: v0.1.0.json
benchmarks/k6/: operator-load-test.js
charts/stellar-operator/: values.schema.json
charts/stellar-operator/templates/: crd.yaml  rbac.yaml
config/crd/: stellarnode-crd.yaml
docs/: benchmarking.md  fmea-stellarnode.md  forensic-snapshot.md  metallb-bgp-anycast.md  vault-stellar-tutorial.md
examples/: canary-rollout.yaml  metallb-bgp-anycast.yaml
examples/simulator/: three-validators.yaml
examples/vault/: README.md
monitoring/: grafana-dashboard.json
scripts/: create_batch_10_issues.sh  create_batch_11_issues.sh  create_batch_12_issues.sh  create_batch_13_issues.sh  create_batch_14_issues.sh  create_batch_15_issues.sh  create_batch_16_issues.sh  create_batch_17_issues.sh  create_batch_18_issues.sh  create_batch_19_issues.sh  create_batch_2_issues.sh  create_batch_3_issues.sh  create_batch_4_issues.sh  create_batch_5_issues.sh  create_batch_6_issues.sh  create_batch_7_issues.sh  create_batch_8_issues.sh  create_batch_9_issues.sh  soak-test.sh
src/: error.rs  explain.rs  kubectl_plugin.rs  lib.rs  main.rs  preflight.rs  runbook.rs  sidecar.rs
src/backup/: mod.rs  scheduler.rs
src/backup/providers/: arweave.rs  ipfs.rs  mod.rs
src/controller/: archive_health.rs  archive_prune.rs  captive_core.rs  cost.rs  cross_cluster.rs  diff.rs  dr_test.rs  finalizers.rs  forensic_snapshot.rs  health.rs  kms_secret.rs  metrics.rs  mod.rs  oci_snapshot.rs  reconciler.rs  reconciler_test.rs  remediation.rs  remediation_test.rs  resources.rs  resources_test.rs  traffic_test.rs  vpa.rs
src/crd/: mod.rs  seed_secret.rs  stellar_node.rs  tests.rs  types.rs
src/rest_api/: custom_metrics.rs  handlers.rs  mod.rs  server.rs
src/scheduler/: scoring.rs
src/webhook/: mutation.rs  server.rs
tests/: dry_run_test.rs  reconciler_fuzz.rs  service_mesh_e2e_test.rs
tests/chaos/: 04-validator-peer-partition.yaml  run-partition-verify.sh
